<resources>
    <string name="app_name">TanyaPakar</string>
    <string name="yakin_keluar">Yakin ingin keluar?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="keluar">Keluar</string>
    <string name="cari_pakar">Cari Pakar</string>
    <string name="pilih_spesifikasi">Pilih spesifikasi</string>
    <string name="semua">Semua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori">Kategori</string>
    <string name="detail_pakar">Detail Pakar</string>
    <string name="materi">Materi</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="percakapan">Percakapan</string>
    <string name="galeri">Galeri</string>
    <string name="ketik_sesuatu">Ketik sesuatu</string>
    <string name="initial_chat">Halo, ada yang ingin ditanyakan?</string>
    <string name="yakin_ingin_menghakhiri">Yakin Ingin Mengakhiri Obrolan?</string>
    <string name="dikelolah_oleh">Dikelolah oleh</string>
    <string name="log_kegiatan">Log Kegiatan</string>
    <string name="add_log">Unggah Log Kegiatan</string>
    <string name="choose_file">Pilih file</string>
    <string name="hapus">Hapus</string>
    <string name="yakin_ingin_hapus">Yakin ingin menghapus log ini?</string>
    <string name="add_materi">Unggah Materi</string>
    <string name="yakin_ingin_hapus_materi">Yakin ingin menghapus materi ini?</string>
</resources>