<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/pilih_spesifikasi"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:alpha="0.7"
            android:background="@drawable/icon_close"
            android:backgroundTint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_all_spec"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/margin_start_end"
            android:background="@drawable/selector_spec"
            android:button="@android:color/transparent"
            android:text="@string/semua"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_title" />

        <TextView
            android:id="@+id/tv_label_common_topic"
            style="@style/SubSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/kategori"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_all_spec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_spesifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout_with_ds"
            app:layout_constraintTop_toBottomOf="@id/tv_label_common_topic" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>