<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/placeholder_logo" />

            <TextView
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/selamat_datang"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                style="@style/SubSubHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_start_end"
                android:layout_marginBottom="@dimen/margin_start_end"
                android:text="Lorem Ipsum"
                android:textColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_start_end"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="@dimen/margin_start_end"
                        android:src="@drawable/bg_home"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_start_end"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/bt_logout"
                        app:layout_constraintStart_toEndOf="@id/img_profile"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/SubSubHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="Unknown"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_role"
                            style="@style/TitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="Pengunjung" />

                        <TextView
                            android:id="@+id/tv_phone"
                            style="@style/TitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="-" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_logout"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="@dimen/margin_start_end"
                        android:background="@drawable/selector_login_btn"
                        android:text="@string/keluar"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/cv_tanya_pakar"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:layout_marginBottom="@dimen/margin_start_end"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_item_home"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_start_end"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tanya Pakar"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/SubSubHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lorem Ipsum"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_materi"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:layout_marginBottom="@dimen/margin_start_end"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_item_home"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_start_end"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Materi"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/SubSubHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lorem Ipsum"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_galery"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:layout_marginBottom="@dimen/margin_start_end"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_item_home"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_start_end"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Galeri"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/SubSubHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lorem Ipsum"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_chat"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/percakapan"
        android:textColor="@color/white"
        app:icon="@drawable/icon_chat"
        android:layout_gravity="right|bottom"/>
</FrameLayout>